src/objects/Inventaire__c.object
<CustomObject>
    <description>Base de donnée des actifs  pour fins de gestion, d&apos;entretien, de calibration et d&apos;assurances</description>
    <fields>
        <fullName>Accessoires__c</fullName>
        <label>Accessoires</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adresse_du_Fournisseur__c</fullName>
        <description>Si la facture n&apos;est pas jointe à la fiche, il est important de savoir où le matériel a été acheté.</description>
        <inlineHelpText>Si la facture n&apos;est pas jointe à la fiche, il est important de savoir où le matériel a été acheté.</inlineHelpText>
        <label>Adresse du Fournisseur</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amortissement__c</fullName>
        <description>Le pourcentage de l&apos;amortissement relié à l&apos;actif.</description>
        <inlineHelpText>Le pourcentage de l&apos;amortissement relié à l&apos;actif.</inlineHelpText>
        <label>Amortissement</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Categorie_actif__c</fullName>
        <label>Catégorie d&apos;actif</label>
        <picklist>
            <picklistValues>
                <fullName>Fourniture d&apos;expertises</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instruments scientifiques</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matériel Bureautique</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matériel Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matériel Photographique</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matériel TI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobilier</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commentaires_Garantie__c</fullName>
        <description>Inscrire ici les commentaires sur la garantie, ex.: quels sont les pièces qui sont garanties.</description>
        <inlineHelpText>Inscrire ici les commentaires sur la garantie, ex.: quels sont les pièces qui sont garanties.</inlineHelpText>
        <label>Commentaires Garantie</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commentaires__c</fullName>
        <label>Commentaires</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Contrat_service__c</fullName>
        <label>Contrat de service</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_achat__c</fullName>
        <label>Date achat</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Derniere_date_retour__c</fullName>
        <label>Dernière date de retour</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Derniere_date_sortie__c</fullName>
        <label>Dernière date de sortie</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Emplacement__c</fullName>
        <label>Emplacement</label>
        <picklist>
            <picklistValues>
                <fullName>Laval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oshawa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ottawa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Québec</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fin_de_Location__c</fullName>
        <description>Date de la fin de la location.</description>
        <inlineHelpText>Date de la fin de la location.</inlineHelpText>
        <label>Fin de Location</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fournisseur__c</fullName>
        <label>Fournisseur</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grave__c</fullName>
        <defaultValue>false</defaultValue>
        <description>oui
non</description>
        <label>Gravé</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Local__c</fullName>
        <label>Local</label>
        <picklist>
            <picklistValues>
                <fullName>200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>202</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>203</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>204</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>205</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>206</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>207</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>208</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>209</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>211</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>212</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>213</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>214</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>215</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>216</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>217</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>218</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>219</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>220</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>221</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>222</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>223</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>224</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>225</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>226</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>227</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>228</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>229</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cochez la case si cet actif est loué.</description>
        <inlineHelpText>Cochez la case si cet actif est loué.</inlineHelpText>
        <label>Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manufacturier__c</fullName>
        <label>Manufacturier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cochez si cet actif peut être déplacé hors du bureau.</description>
        <inlineHelpText>Cochez si cet actif peut être déplacé hors du bureau.</inlineHelpText>
        <label>Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_modele__c</fullName>
        <label>Numéro de modèle</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>No_serie__c</fullName>
        <label>Numéro de série</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes_de_servive__c</fullName>
        <label>Notes de servive</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_reparation__c</fullName>
        <label>Notes réparation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Prenom_nom_representant__c</fullName>
        <label>Prénom et nom du représantant</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prêt à:</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Statut_contact__c</field>
                <operation>equals</operation>
                <value>Actif</value>
            </filterItems>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>contains</operation>
                <value>CEP</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Inventaire (Contact)</relationshipLabel>
        <relationshipName>Inventaire1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prochaine_calibration__c</fullName>
        <label>Prochaine calibration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Utilisateur_principal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifie les employés de CEP actifs</inlineHelpText>
        <label>Utilisateur principal</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>contains</operation>
                <value>CEP</value>
            </filterItems>
            <filterItems>
                <field>Contact.Statut_contact__c</field>
                <operation>equals</operation>
                <value>Actif</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Inventaire</relationshipLabel>
        <relationshipName>Inventaire</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cout_acquisition__c</fullName>
        <label>Coût d&apos;acquisition</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>echeance_garantie__c</fullName>
        <label>Échéance de la garantie</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tat_de_service__c</fullName>
        <label>État de service</label>
        <picklist>
            <picklistValues>
                <fullName>Détruit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>En réparation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>En service</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Perdu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIèces de rechange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Réserve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vol</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Inventaire Permanent</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Emplacement__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
        </filters>
        <label>Tout</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>inventaire_Laval</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Emplacement__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Emplacement__c</field>
            <operation>equals</operation>
            <value>Laval</value>
        </filters>
        <label>inventaire Laval</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>inventaire_Oshawa</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Emplacement__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Emplacement__c</field>
            <operation>equals</operation>
            <value>Ottawa</value>
        </filters>
        <label>inventaire Oshawa</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>inventaire_Ottawa</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Emplacement__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Emplacement__c</field>
            <operation>equals</operation>
            <value>Ottawa</value>
        </filters>
        <label>inventaire Ottawa</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>inventaire_Quebec</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Emplacement__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Emplacement__c</field>
            <operation>equals</operation>
            <value>Québec</value>
        </filters>
        <label>inventaire Québec</label>
        <language>fr</language>
    </listViews>
    <nameField>
        <label>No de Inventaire</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventaire</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>